<resources>
    <string name="app_name">Assignment Product Expiry</string>
    <string name="introduction">Introduction</string>
    <string name="this_app_allows_the_user_to_maintain_a_list_of_products_and_their_warranty_expiry_date">This app allows the user to maintain a list of products and their warranty expiry date</string>
    <string name="to_start">To Start</string>
    <string name="phone_app">Phone App</string>
    <string name="click_here">Click Here</string>
    <string name="website">Website</string>
    <string name="list_view">List View</string>
    <string name="add_new_product">Add New Product</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="yyyy_mm_dd_enter_expiry_date">YYYY/MM/DD (Enter Expiry Date)</string>
    <string name="add">ADD</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>

</resources>