<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".itemListActivity">

    <TextView
        android:id="@+id/tvAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BAF2FA"
        android:gravity="center"
        android:text="@string/add_new_product"
        android:textColor="#000000"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/enter_product_name"
        android:inputType="textPersonName"
        android:textColorHint="#000000" />

    <EditText
        android:id="@+id/etExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/yyyy_mm_dd_enter_expiry_date"
        android:inputType="date"
        android:textColorHint="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:linksClickable="false"
            android:text="ADD" />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="UPDATE" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="DELETE" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#BAF2FA"
            android:gravity="center"
            android:text="@string/list_view"
            android:textColor="#000000"
            android:textSize="24sp" />

        <ListView
            android:id="@+id/lvProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>